--- a/FleetManagment.Api/appsettings.json
+++ b/FleetManagment.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "FleetManagmentDbContext": "Server=KSA-302; Database=FleetManagmentApiDatabase; User ID=sa; Password=root; Trusted_Connection=True; TrustServerCertificate=true;"
+  },
   "AllowedHosts": "*"
 }
