--- a/IdentityServer/appsettings.json
+++ b/IdentityServer/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "FleetManagmentIdentityServerDbContext": "Server=KSA-302;Database=FleetManagmentIdentityServerDatabase; User ID=sa;Password=root;Trusted_Connection=True; MultipleActiveResultSets=true"
+  },
   "AllowedHosts": "*"
 }
