--- a/FleetManagment.DataAccess/FleetManagment.DataAccess.csproj
+++ b/FleetManagment.DataAccess/FleetManagment.DataAccess.csproj
@@ -2,7 +2,20 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FleetManagment.Application\FleetManagment.Application.csproj" />
+    <ProjectReference Include="..\FleetManagment.Domain\FleetManagment.Domain.csproj" />
+  </ItemGroup>
 
 </Project>
