--- a/FleetManagment.DataAccess/FleetManagment.DataAccess.csproj
+++ b/FleetManagment.DataAccess/FleetManagment.DataAccess.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <ProjectReference Include="..\FleetManagment.Application\FleetManagment.Application.csproj" />
     <ProjectReference Include="..\FleetManagment.Domain\FleetManagment.Domain.csproj" />
+    <ProjectReference Include="..\FleetManagment.Infrastructure\FleetManagment.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
