--- a/FleetManagment.IdentityServer/FleetManagment.IdentityServer.csproj
+++ b/FleetManagment.IdentityServer/FleetManagment.IdentityServer.csproj
@@ -17,6 +17,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Serilog" Version="2.12.0" />
   </ItemGroup>
 
 </Project>
