--- a/FleetManagment.Client/appsettings.json
+++ b/FleetManagment.Client/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "apiUrl": "https://localhost:5445",
+  "aplicationUrl": "https://localhost:5444",
 }
