Add project SharedModels for Blazor

--- a/FleetManagment.Application/FleetManagment.Application.csproj
+++ b/FleetManagment.Application/FleetManagment.Application.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\FleetManagment.Domain\FleetManagment.Domain.csproj" />
+    <ProjectReference Include="..\FleetManagment.SharedModels\FleetManagment.SharedModels.csproj" />
   </ItemGroup>
 
 </Project>
