--- a/FleetManagment.SharedModels/FleetManagment.SharedModels.csproj
+++ b/FleetManagment.SharedModels/FleetManagment.SharedModels.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.12" />
+    <PackageReference Include="Volo.Abp.ObjectMapping" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FleetManagment.Domain\FleetManagment.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
